# james-gpt

./: .gitignore  README.md  config.py  data.py  model.py  plotting.py  pyproject.toml  softmax_extreme.ipynb  train.py
scribbles/: cross_entropy.ipynb  softmax_extreme.ipynb  test.ipynb
