[project]
name = "gpt-james"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "tokenizers>=0.22.2",
    "torch==2.10.0",
    "tqdm>=4.67.1",
    "transformers>=5.4.0",
    "zstandard>=0.25.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
